bookinfo/security/Productpage-PeerAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: productpage-pa
  namespace: workshop-mesh-apps-N # Editar N
spec:
  selector:
    matchLabels:
      app: productpage
  mtls:
    mode: STRICT
  portLevelMtls:
    8080:
      mode: DISABLE
